--- a/app/assets/stylesheets/locations.css.scss
+++ b/app/assets/stylesheets/locations.css.scss
@@ -1,11 +1,12 @@
 #directions {
   height: 12em;
-  margin: 0 auto;
+  margin: 20px auto;
   width: 750px;
 }
 
 #map {
   height: 12em;
-  margin: 0 auto;
+  padding-top: 40px;
+  margin: 20px auto;
   width: 750px;
 }
